--- a/_config.yml
+++ b/_config.yml
@@ -41,13 +41,13 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://trial-n-terror.github.io/
+url: https://trial-n-terror.github.io/n-gamedev
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "/n-gamedev"
 
 #
 # !! You don't need to change any of the configuration flags below !!
